# microdetect

./: .coverage  .coverage.Rodolfos-MacBook-Pro.local.58911.XLPslItx  .coveragerc  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-pt.md  README.md  README.pt.md  bounding_boxes.py  config.yaml  convert_tiff.py  data.yaml  flutter_launcher_icons.yaml  main.py  makefile  pubspec.yaml  pyproject.toml  pytest.ini  pytest.ini.bak  requirements.txt  setup.py  sonar-project.properties  tox.ini  training_model.py
.cursor/rules/: back-rules.mdc  front-rules.mdc  my-rules.mdc  servidor-backend.mdc
.github/: dependabot.yml
.github/workflows/: auto-release.yaml  ci.yml  publish.yml
docs/: advanced_configuration.md  aws_codeartifact_setup.md  development_guide.md  index.md  installation_guide.md  troubleshooting.md  update_and_release_model.md  update_system.md
docs/en/: advanced_configuration.md  annotation_guide.md  aws_codeartifact_setup.md  basic_evaluation.md  checkpoint_management.md  configuration_reference.md  cross_validation_benchmark.md  data_augmentation.md  dataset_management.md  (+20 more)
labels/: 5112bbrux-9.txt
lib/: main.dart
macos/: Podfile
microdetect/: __init__.py  cli.py  default_config.yaml
plugins/camera_access/windows/: CMakeLists.txt  camera_access_plugin.cpp  camera_access_plugin.h  camera_manager.cpp  camera_manager.h
python_backend/: start_backend.py
scripts/: install_production.bat  install_production.sh  setup.bat  setup.sh
tests/: conftest.py  test_basic.py  test_config.yaml  tests_imports.py
windows/: CMakeLists.txt
(+321 files in other folders)
